--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
     
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NCTBQK5FM2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NCTBQK5FM2');
+</script>
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link rel="apple-touch-icon" sizes="180x180" href="favicon.ico/apple-touch-icon">
