--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 </head>
 <body>
    <main>
-<h1 class="titulo">Miguel Oliveira</h1>
+<h1 class="titulo"> Miguel Oliveira</h1>
 <img src="imagens/icon.jpg" class="icon" alt="">
 <section class="redes"> 
-<a  href="https://twitter.com/home" target="_blank"> <img src="https://img.shields.io/badge/Telegram-2CA5E0?style=for-the-badge&logo=telegram&logoColor=white"> </a>
+<a  href="https://t.me/eimigueloliveir" target="_blank"> <img src="https://img.shields.io/badge/Telegram-2CA5E0?style=for-the-badge&logo=telegram&logoColor=white"> </a>
 <a  href="https://discord.gg/CFQ88tKKYP" target="_blank"> <img src="https://img.shields.io/badge/Discord-7289DA?style=for-the-badge&logo=discord&logoColor=white"> </a><br>
 <a  href="https://www.instagram.com/eimigueloliveir/" target="_blank"> <img src="https://img.shields.io/badge/Instagram-E4405F?style=for-the-badge&logo=instagram&logoColor=white"> </a>
 <a  href="https://twitter.com/eimigueloliveir" target="_blank"> <img src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=twitter&logoColor=white"> </a><br>
 <a  href="https://github.com/eimigueloliveir" target="_blank"> <img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"> </a>
-<a  href="tiktok.com/@eimigueloliveir" target="_blank"> <img src="https://img.shields.io/badge/TikTok-000000?style=for-the-badge&logo=tiktok&logoColor=white"> </a><br>
+<a  href="https://www.tiktok.com/@eimigueloliveir" target="_blank"> <img src="https://img.shields.io/badge/TikTok-000000?style=for-the-badge&logo=tiktok&logoColor=white"> </a><br>
 <a  href="https://www.youtube.com/c/eimigueloliveir" target="_blank"> <img src="https://img.shields.io/badge/YouTube-FF0000?style=for-the-badge&logo=youtube&logoColor=white"> </a>
 <a  href="https://www.twitch.tv/eimigueloliveir" target="_blank"> <img src="https://img.shields.io/badge/Twitch-9146FF?style=for-the-badge&logo=twitch&logoColor=white"> </a><br>
 <a  href="https://s.team/p/gnck-wqgm/cmphghmh" target="_blank"> <img src="https://img.shields.io/badge/Steam-000000?style=for-the-badge&logo=steam&logoColor=white"> </a>
