--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
 
 
 
-</section>
 
+</section>
+<h2>Telefone: 40028922</h2>
+<h3>ligue agora ganhe já e não deixe pra depois</h3>
    </main>
    <script type="text/javascript" src="/js/escrever.js"></script>
 </body>
