--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
    <main>
-<h1 class="titulo"> Miguel Oliveira</h1>
+<h1 class="titulo" id="titulo"> Miguel Oliveira</h1>
 <img src="imagens/icon.jpg" class="icon" alt="">
 <section class="redes"> 
 <a  href="https://t.me/eimigueloliveir" target="_blank"> <img src="https://img.shields.io/badge/Telegram-2CA5E0?style=for-the-badge&logo=telegram&logoColor=white"> </a>
