updates de otimizações

--- a/index.html
+++ b/index.html
@@ -42,15 +42,12 @@
             <img class="imagemFoto"  src="/assets/imagens/Miguel_Oliveira.jpg"_blank">
             </div>
             <section>
-
             <div>    
-
             <p class="texto">        
-                Opa, me chamo Miguel Oliveira, tenho 16 anos e amo programação, Gosto de Filmes, Séries, Jogos e Musicas. Sou CEO da MiguelSoft, empresa de desenvolvimento de softwares, jogos e bots gerais.
+                Opa, me chamo Miguel Oliveira, tenho 16 anos e amo programação, Gosto de Filmes, Séries, Jogos e Musicas. 
+                Sou CEO da MiguelSoft, empresa de desenvolvimento de softwares, jogos e bots gerais.
             </p> <br>
-                  
             </div> 
-            
         </section>
         <a href="https://miguelsoft.com.br"><img src="/assets/imagens/miguelsoft.png" class="miguelsoft"></a><br><br>
         <h1 class="Tec">Dominio de Tecnologias</h1>
