--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <span class="token-keyword">Programmer</span> Miguel = <span class="token-keyword">new</span>()
             {
                 Name = <span class="token-literal">"Miguel Oliveira"</span>,
+                Age = <span class="token-enum">16</span>,
                 FavoriteLanguage = <span class="token-enum">Language</span>.CSharp,
                 Links = <span class="token-keyword">new</span> [] {
                     <a href="https://twitter.com/eimigueloliveir" target="_blank" class="token-signature"><img src="/img/redes-sociais/twitter.png" alt="Twitter" class="emoji" />Twitter</a>,
